# misis2024s-23-03-fokaidi-v-n

./: .gitignore  CMakeLists.txt  README.md  codeforces.id  status.md
prj.app/: CMakeLists.txt
prj.app/robocalc/: CMakeLists.txt  robocalc.hpp  test_robocalc.cpp
prj.app/timing-q/: CMakeLists.txt
prj.app/timing_q/: CMakeLists.txt  timing_q.cpp
prj.codeforces/: 0004a.cpp  0136b.cpp  0155a.cpp  0172a.cpp  0184a.cpp  0263a.cpp  0271a.cpp  0276a.cpp  0339b.cpp  0386a.cpp  0421a.cpp  0617a.cpp  0769a.cpp  0935b.cpp  0978a.cpp  0978b.cpp  1352a.cpp  1512c.cpp  1559a.cpp  1585a.cpp  1669d.cpp  1670b.cpp  1690d.cpp  1717b.cpp  1721bcpp  1734b.cpp  1744c.cpp  1858a.cpp  1872a.cpp  1873c.cpp  1873d.cpp  1881a.cpp  1883c.cpp  1895a.cpp  1899b.cpp  1910a.cpp  1916b.cpp  1916c.cpp  1917b.cpp  1920b.cpp  (+8 more)
prj.lab/: CMakeLists.txt
prj.lab/bitset/: bitset.cpp  bitset.hpp
prj.lab/complex/: complex.cpp  complex.hpp
prj.lab/dynarr/: dynarr.cpp  dynarr.hpp
prj.lab/dynarrt/: dynarrt.hpp
prj.lab/queuearr/: queuearr.cpp  queuearr.hpp
prj.lab/queuearrt/: queuearrt.hpp
prj.lab/queuelst/: CMakeLists.txt  queuelst.cpp  queuelst.hpp
prj.lab/queuelstpr/: CMakeLists.txt  queuelstpr.cpp  queuelstpr.hpp
prj.lab/queuelstprt/: queuelstprt.hpp
prj.lab/queuelstt/: queuelstt.hpp
prj.lab/rational/: rational.cpp  rational.hpp
prj.lab/stackarr/: CMakeLists.txt  stackarr.cpp  stackarr.hpp
prj.lab/stackarrt/: stackarrt.hpp
prj.lab/stacklst/: stacklst.cpp  stacklst.hpp
prj.lab/stacklstt/: stacklstt.hpp
prj.test/: CMakeLists.txt  test_bitset.cpp  test_complex.cpp  test_dynarr.cpp  test_queuearr.cpp  test_queuelst.cpp  test_queuelstpr.cpp  test_rational.cpp  test_stackarr.cpp  test_stackarrt.cpp  test_stacklst.cpp
