add_executable(4a 0004a.cpp)
add_executable(1925a 1925a.cpp)
add_executable(1916b 1916b.cpp)
add_executable(1925b 1925b.cpp)
add_executable(1910a 1910a.cpp)
add_executable(1922b 1922b.cpp)
add_executable(1920b 1920b.cpp)
add_executable(1921d 1921d.cpp)
add_executable(1917b 1917b.cpp)
add_executable(1883c 1883c.cpp)
add_executable(1899b 1899b.cpp)