add_executable(4a 0004a.cpp)
add_executable(1925a 1925a.cpp)
add_executable(1916b 1916b.cpp)
add_executable(1925b 1925b.cpp)
add_executable(1910a 1910a.cpp)
add_executable(1922b 1922b.cpp)
add_executable(1920b 1920b.cpp)
add_executable(1921d 1921d.cpp)
add_executable(1917b 1917b.cpp)
add_executable(1883c 1883c.cpp)
add_executable(1899b 1899b.cpp)
add_executable(263a 0263a.cpp)
add_executable(271a 0271a.cpp)
add_executable(276a 0276a.cpp)
add_executable(617a 0617a.cpp)
add_executable(935b 0935b.cpp)
add_executable(978a 0978a.cpp)
add_executable(978b 0978b.cpp)
add_executable(1352a 1352a.cpp)
add_executable(1559a 1559a.cpp)
add_executable(1585a 1585a.cpp)
add_executable(1717b 1717b.cpp)
add_executable(1858a 1858a.cpp)
add_executable(0935b 0935b.cpp)
add_executable(1690d 1690d.cpp)
add_executable(1669d 1669d.cpp)
add_executable(1744c 1744c.cpp)
add_executable(1895a 1895a.cpp)
add_executable(769a 0769a.cpp)
add_executable(421a 0421a.cpp)
add_executable(386a 0386a.cpp)
add_executable(172a 0172a.cpp)
add_executable(1881a 1881a.cpp)
add_executable(136b 0136b.cpp)
add_executable(155a 0155a.cpp)
add_executable(184a 0184a.cpp)
add_executable(339b 0339b.cpp)
add_executable(1512c 1512c.cpp)
add_executable(1670b 1670b.cpp)
